# internal/application/dtos/sellers/update_seller_request.go
@@ -1,0 +1,8 @@
+package dtos
+
+type UpdateSellerRequestDTO struct {
+	CID         *int    `json:"cid"`
+	CompanyName *string `json:"company_name"`
+	Address     *string `json:"address"`
+	Telephone   *string `json:"telephone"`
+}
